# Defipoly

./: .env.example  .gitignore  MONOREPO_SETUP.md  OPTIMIZATION_MIGRATION_GUIDE.md  README.md  audit.sh  package-lock.json  package.json  todo-ideas.txt
defipoly-program/: .env.example  .gitignore  Anchor.toml  BOT-TESTING-README.md  Cargo.toml  batch-bot-operations.sh  close-commands.sh  package-lock.json  package.json  tsconfig.json
defipoly-program/admin-cli/: README.md  UPDATED_TEST_REPORT_WITH_DECIMALS.md  config.ts  index.ts  package.json  types.ts
defipoly-program/admin-cli/backups/: game-config-backup-1763492850027.json  game-config-backup-1763492860111.json  game-config-backup-1763492994324.json  game-config-backup-1763493679320.json
defipoly-program/admin-cli/commands/: clear-cooldowns.ts  close-player-account.ts  emergency-withdraw.ts  grant-property.ts  grant-shield.ts  index.ts  pause-game.ts  revoke-property.ts  transfer-authority.ts  update-accumulation-bonus.ts  update-cooldown.ts  update-global-rates.ts  update-phase.ts  update-property-max-slots.ts  update-property-price.ts  update-property-yield.ts  update-set-bonus.ts  (+2 more)
defipoly-program/config/: devnet.json
defipoly-program/scripts/: admin-cli.ts  bot-interactions.ts  check-current-ownership.ts  check-ownership.ts  check-property-17.ts  close-player-accounts.ts  copy-idl.mjs  deployment-info.json  generate-constants.ts  initialize-game.ts  mint-bulk-tokens.ts  mint-tokens.ts  new-deploy.ts  property-config.ts  setup-test-wallets.ts  storeToBackend.ts
defipoly-program/tests/: defipoly-program.ts
(+297 files in other folders)
