[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization  
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = "symbols"      # Remove debug symbols
overflow-checks = false # Remove overflow checks

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1